# SpotlightSaver

./: .gitignore  App.config  CMakeLists.txt  Cargo.toml  Constants.cs  Helpers.cs  LICENSE  Program.cs  README.md  SpotlightSaver.csproj  SpotlightSaver.sln  constants.py  go.mod  go.sum  main.go  main.py  requirements.txt  setup.iss  setup.py
.run/: Publish SpotlightSaver to folder.run.xml
Properties/: AssemblyInfo.cs  Settings.Designer.cs  Settings.settings
SpotlightSaver/: GlobalUsings.cs  Program.cs  SpotlightSaver.csproj
cmake/: setup.iss.in  spotlight_saver.rc.in
src/: main.cc  main.rs
